Performance Regression: Doing sculpt strokes on high-poly meshes freezes Blender #116141

Closed
opened 2023-12-13 13:22:43 +01:00 by Nika Kutsniashvili · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 01:08, hash: 768cd9b7630c
Worked: (newest version of Blender that worked as expected)

Short description of error
Compared to 4.0 sculpting on high-poly meshes (Cube with 10 subdivisions in this case) has worst performance, and frequently freezes Blender on brush strokes, that didn't happen in 4.0. It also takes longer to initiate sculpt mode and has lag on cursor.

See video for demonstration. I tested this numerous times and it freezes every single time.

https://streamable.com/l0bte6

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 01:08, hash: `768cd9b7630c` Worked: (newest version of Blender that worked as expected) **Short description of error** Compared to 4.0 sculpting on high-poly meshes (Cube with 10 subdivisions in this case) has worst performance, and frequently freezes Blender on brush strokes, that didn't happen in 4.0. It also takes longer to initiate sculpt mode and has lag on cursor. See video for demonstration. I tested this numerous times and it freezes every single time. https://streamable.com/l0bte6
Nika Kutsniashvili added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-13 13:22:44 +01:00

yes, something is really broken, and i didnt need 10 levels

add a subdiv to the cube/ 8 levels/apply, switch to sculpt, few brush strokes and blender will freeze
high prio material
broken: blender-4.1.0-alpha+main.768cd9b7630c-windows.amd64-release

yes, something is really broken, and i didnt need 10 levels add a subdiv to the cube/ 8 levels/apply, switch to sculpt, few brush strokes and blender will freeze high prio material broken: blender-4.1.0-alpha+main.768cd9b7630c-windows.amd64-release <video controls="" src="https://projects.blender.org/attachments/d6822573-089a-43f1-9b88-ff073ff8d619"></video>

Confirmed as well -- looks to be a deadlock as all the threads are blocked waiting on a mutex in the below function:

>	blender.exe!blender::ed::sculpt_paint::undo::push_node(Object * ob, PBVHNode * node, blender::ed::sculpt_paint::undo::Type type) Line 1519	C++
 	blender.exe!do_brush_action_task(Object * ob, const Brush * brush, PBVHNode * node) Line 3289	C++
 	[Inline Frame] blender.exe!do_brush_action::__l55::<lambda_1>::operator()(const blender::IndexRange) Line 3402	C++

Confirmed as well -- looks to be a deadlock as all the threads are blocked waiting on a mutex in the below function: ``` > blender.exe!blender::ed::sculpt_paint::undo::push_node(Object * ob, PBVHNode * node, blender::ed::sculpt_paint::undo::Type type) Line 1519 C++ blender.exe!do_brush_action_task(Object * ob, const Brush * brush, PBVHNode * node) Line 3289 C++ [Inline Frame] blender.exe!do_brush_action::__l55::<lambda_1>::operator()(const blender::IndexRange) Line 3402 C++ ```
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-14 03:40:03 +01:00
Hans Goudey self-assigned this 2023-12-14 03:40:07 +01:00
Member

Found the mistake, it's a problem with task isolation. I'll commit a quick fix now to make sure the next build doesn't have this problem. But we'll need to figure out a better way to control whether parallelism happens for some of our utility functions.

Found the mistake, it's a problem with task isolation. I'll commit a quick fix now to make sure the next build doesn't have this problem. But we'll need to figure out a better way to control whether parallelism happens for some of our utility functions.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-14 03:46:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116141
No description provided.